[package]
name = "mkt_pubber"
version = "0.1.0"
edition = "2021"

[dependencies]
redis = { version = "0.24.0", features = ["tokio-comp", "connection-manager"] }
tokio = { version = "1.36.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.11"
anyhow = "1.0"
capnp = "0.21.1"
flate2 = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1"
serde_yaml = "0.9"
prost = "0.12"
tonic = "0.10"
chrono = "0.4"
base64 = "0.21"
zmq = "0.10.0"
tokio-utils = "0.1.2"
tokio-util = "0.7.15"

[build-dependencies]
tonic-build = "0.10"
capnpc = "0.19"

